infrastructure/configs/networking/test-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-route
  namespace: kube-system
spec:
  parentRefs:
  - name: prod-web
    namespace: kube-system
  rules:
  - backendRefs:
    - name: vault-ui
      namespace: kube-system
      port: 8200
