infrastructure/configs/networking/test-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
  namespace: kube-system
spec:
  parentRefs:
  - name: prod-web
    namespace: default
  hostnames:
    - hubble.internal.zinkithink.com
  rules:
  - backendRefs:
    - name: hubble-ui
      namespace: kube-system
      port: 80
